syntax="proto3";
option csharp_namespace="Proto";

import "common.proto";

package standard;

message AuthenticationJoinRequest {
  string user_name=1;
}
message AuthenticationJoinReply {
  common.ResultReply result=1;
  repeated string user_names=2;
}

service Authentication {
  rpc connect(AuthenticationJoinRequest) returns(AuthenticationJoinReply);
}
